missing translations/indentation

--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="about_author">"Auteur :"</string>
 	<string name="about_blizzard">Tempête de neige</string>
@@ -8,6 +8,7 @@
 	<string name="about_for_translators_text">Si vous souhaitez traduire cette application, rendez-vous sur GitHub (lien ci-dessus) !</string>
 	<string name="about_for_translators">"Traductions:"</string>
 	<string name="about_hailstone">Grêle</string>
+	<string name="about_haze">Brume</string>
 	<string name="about_heavy_snow">Grosse chute de neige</string>
 	<string name="about_heavy_rain">Pluie battante</string>
 	<string name="about_light_rain">Pluie fine</string>
@@ -18,6 +19,7 @@
 	<string name="about_rainstorm">Pluie torrentielle</string>
 	<string name="about_rain_drizzle">Averse</string>
 	<string name="about_sleet">Grésil</string>
+	<string name="about_snow_showers">Averses de neige</string>
 	<string name="about_social">"Liens sociaux :"</string>
 	<string name="about_sunny">Ciel dégagé</string>
 	<string name="about_t_storms">Orage</string>
@@ -38,7 +40,7 @@
 	<string name="close">Fermer</string>
 	<string name="date_format_title">Format de la date</string>	
 	<string name="date_format_mdy">MM/dd/yyyy</string>
-    <string name="date_format_dmy">dd/MM/yyyy</string>
+	<string name="date_format_dmy">dd/MM/yyyy</string>
 	<string name="dialog_color_picker">Choix de la couleur</string>
 	<string name="donate">Faire un don</string>
 	<string name="donations_button_close">Fermer</string>
@@ -56,50 +58,55 @@
 	<string name="donations_paypal_item_name">InApp Donation</string>
 	<string name="donations_thanks_dialog">Merci beaucoup pour votre don !</string>
 	<string name="donations_thanks_dialog_title">Merci !</string>
+	<string name="donations_yandex">Yandex.Money</string>
 	<string name="end_time_title">Fin</string>
 	<string name="fetching_location">Géolocalisation…</string>
 	<string name="forecast_chance_of_rain">Risque de pluie</string>
-    <string name="forecast_chance_of_showers">"Risque d'averses"</string>
-    <string name="forecast_chance_of_snow">Risque de neige</string>
-    <string name="forecast_chance_of_snow_showers">Averses de neige</string>
-    <string name="forecast_chance_of_storm">Risque de tempête</string>
-    <string name="forecast_chance_of_tstorm">"Risque d'orages"</string>
-    <string name="forecast_clear">Clair</string>
-    <string name="forecast_cloudy">Nuageux</string>
-    <string name="forecast_drizzle">Bruine</string>
-    <string name="forecast_dust">Poussière</string>
-    <string name="forecast_fair">Beau temps</string>
-    <string name="forecast_flurries">Averses de neige</string>
-    <string name="forecast_fog">Brouillard</string>
-    <string name="forecast_freezing_drizzle">Bruine verglaçante</string>
+	<string name="forecast_chance_of_showers">"Risque d'averses"</string>
+	<string name="forecast_chance_of_snow">Risque de neige</string>
+	<string name="forecast_chance_of_snow_showers">Averses de neige</string>
+	<string name="forecast_chance_of_storm">Risque de tempête</string>
+	<string name="forecast_chance_of_tstorm">"Risque d'orages"</string>
+	<string name="forecast_clear">Clair</string>
+	<string name="forecast_cloudy">Nuageux</string>
+	<string name="forecast_cold">Froid</string>
+	<string name="forecast_drizzle">Bruine</string>
+	<string name="forecast_dust">Poussière</string>
+	<string name="forecast_fair">Beau temps</string>
+	<string name="forecast_flurries">Averses de neige</string>
+	<string name="forecast_fog">Brouillard</string>
+	<string name="forecast_freezing_drizzle">Bruine verglaçante</string>
 	<string name="forecast_freezing_rain">Pluie verglaçante</string>
-    <string name="forecast_hail">Grêle</string>
-    <string name="forecast_haze">Brume</string>
-    <string name="forecast_heavy_rain">Pluie battante</string>
-    <string name="forecast_icy">Glacial</string>
-    <string name="forecast_light_rain">Pluie légère</string>
-    <string name="forecast_light_snow">Neige légère</string>
-    <string name="forecast_mist">Brouillard</string>
-    <string name="forecast_mostly_cloudy">Quelques éclaircies</string>
-    <string name="forecast_mostly_sunny">Assez ensoleillé</string>
-    <string name="forecast_overcast">Couvert</string>
-    <string name="forecast_partly_cloudy">Partiellement nuageux</string>
-    <string name="forecast_partly_sunny">Partiellement ensoleillé</string>
-    <string name="forecast_rain">Pluie</string>
-    <string name="forecast_rain_and_snow">Pluie et neige</string>
-    <string name="forecast_rain_showers">Averses de pluie</string>
+	<string name="forecast_hail">Grêle</string>
+	<string name="forecast_haze">Brume</string>
+	<string name="forecast_heavy_rain">Pluie battante</string>
+	<string name="forecast_hot">Chaud</string>
+	<string name="forecast_icy">Glacial</string>
+	<string name="forecast_light_rain">Pluie légère</string>
+	<string name="forecast_light_snow">Neige légère</string>
+	<string name="forecast_mist">Brouillard</string>
+	<string name="forecast_mostly_cloudy">Quelques éclaircies</string>
+	<string name="forecast_mostly_sunny">Assez ensoleillé</string>
+	<string name="forecast_overcast">Couvert</string>
+	<string name="forecast_partly_cloudy">Partiellement nuageux</string>
+	<string name="forecast_partly_sunny">Partiellement ensoleillé</string>
+	<string name="forecast_rain">Pluie</string>
+	<string name="forecast_rain_and_snow">Pluie et neige</string>
+	<string name="forecast_rain_showers">Averses de pluie</string>
 	<string name="forecast_sand">Sable</string>
-    <string name="forecast_scattered_showers">Averses éparses</string>
-    <string name="forecast_scattered_thunderstorms">Orages épars</string>
-    <string name="forecast_showers">Averses</string>
-    <string name="forecast_sleet">Neige fondue</string>
-    <string name="forecast_smoke">Fumée</string>
-    <string name="forecast_snow">Neige</string>
-    <string name="forecast_snow_showers">Averses de neige</string>
+	<string name="forecast_scattered_showers">Averses éparses</string>
+	<string name="forecast_scattered_thunderstorms">Orages épars</string>
+	<string name="forecast_showers">Averses</string>
+	<string name="forecast_sleet">Neige fondue</string>
+	<string name="forecast_smoke">Fumée</string>
+	<string name="forecast_snow">Neige</string>
+	<string name="forecast_snow_showers">Averses de neige</string>
 	<string name="forecast_snow_storm">Tempête de neige</string>
-    <string name="forecast_sunny">Ensoleillé</string>
-    <string name="forecast_thunderstorm">Orage</string>
-    <string name="forecast_windy">Tempête</string>
+	<string name="forecast_sunny">Ensoleillé</string>
+	<string name="forecast_thunderstorm">Orage</string>
+	<string name="forecast_thunderstorms">Orages</string>	
+	<string name="forecast_tornado">Tornade</string>
+	<string name="forecast_windy">Tempête</string>
 	<string name="just_now">"A l'instant"</string>
 	<string name="loading">Chargement…</string>
 	<string name="location_edit">Nom de la ville</string>
@@ -107,21 +114,35 @@
 	<string name="location_list">Villes</string>
 	<string name="location_search">"Recherche d'une ville"</string>
 	<string name="main_screen_text_color_summary">"Couleur du texte sur l'écran principal"</string>
+	<string name="menu">Menu</string>
 	<string name="menu_delete_theme">Supprimer</string>
 	<string name="menu_hourly">Heure par heure</string>
 	<string name="menu_import">Importer depuis la carte SD</string>
 	<string name="menu_locations">Villes</string>
-	<string name="menu_moon_phases">Phases lunaires </string>
+	<string name="menu_moon_phases">Phases lunaires</string>
 	<string name="menu_settings">Paramètres</string>
 	<string name="menu_themes">Thèmes</string>
 	<string name="menu_trend">Tendance</string>
 	<string name="menu_update">Mise à jour</string>
+	<string name="moon_age">Age : %s jours</string>
+	<string name="moon_newmoon">Nouvelle lune</string>
+	<string name="moon_waxingcrescent">Premier croissant</string>
+	<string name="moon_firstquarter">Premier quartier</string>
+	<string name="moon_waxinggibbous">Lune gibbeuse croissante</string>
+	<string name="moon_full">Pleine lune</string>
+	<string name="moon_waninggibbous">Lune gibbeuse décroissante</string>
+	<string name="moon_lastquarter">Dernier quartier</string>
+	<string name="moon_waningcrescent">Dernier croissant</string>
+	<string name="moon_current_view">Mode de vue : %s</string>
+	<string name="moon_illuminated">Illuminée</string>
+	<string name="moon_since">Depuis</string>
 	<string name="network_error">Impossible de se connecter au serveur</string>
 	<string name="network_in_quiet_hours">Vous êtes en heures de repos. Mises à jour annulées.</string>
-    <string name="network_in_roaming">Vous avez des paramètres pour désactiver les mises à jour en itinérance.</string>
-    <string name="network_wifi_only">Mises à jour uniquement via Wi-Fi.</string>
+	<string name="network_in_roaming">Vous avez des paramètres pour désactiver les mises à jour en itinérance.</string>
+	<string name="network_wifi_only">Mises à jour uniquement via Wi-Fi.</string>
 	<string name="new_version">Nouvelle version</string>
 	<string name="no_provider">La géolocalisation a échoué, veuillez entrer manuellement votre position.</string>
+	<string name="no_weather_provider">Fournisseur de météo MIUI non trouvé.</string>
 	<string name="not_now">Pas maintenant</string>
 	<string name="ok">OK</string>
 	<string name="press_color_to_apply">"Appuyer sur la couleur pour l'appliquer"</string>
@@ -153,7 +174,7 @@
 	<string name="settings_check_updates_title">Vérifier les mises à jour</string>
 	<string name="settings_click_actions">Actions sur clics</string>
 	<string name="settings_colorize_weather_icons_title">Colorier les icônes</string>
-    <string name="settings_colorize_weather_icons_summary">Utiliser la couleur du texte pour les icônes(pour les icônes météo blancs par ex.)</string>
+	<string name="settings_colorize_weather_icons_summary">Utiliser la couleur du texte pour les icônes(pour les icônes météo blancs par ex.)</string>
 	<string name="settings_miui_support_summary">"Activer la prise en charge de l'icône dynamique de l'application (à condition que l'icône ait été installée par ailleurs)"</string>
 	<string name="settings_miui_support_title">"Activer l'icône dynamique"</string>
 	<string name="settings_miui_v5_summary">Activer si le système tourne sous la ROM MIUI v5</string>
@@ -178,14 +199,14 @@
 	<string name="settings_weather_provider">Fournisseur météo</string>
 	<string name="settings_widgets_click_clock_summary">"Choisir l'application à lancer en cliquant sur l'heure affichée dans le widget"</string>
 	<string name="settings_widgets_click_clock_title">"Clic sur l'horloge"</string>
-    <string name="settings_widgets_click_date_summary">"Choisir l'application à lancer en cliquant sur la date affichée dans le widget"</string>
-    <string name="settings_widgets_click_date_title">Clic sur la date</string>
+	<string name="settings_widgets_click_date_summary">"Choisir l'application à lancer en cliquant sur la date affichée dans le widget"</string>
+	<string name="settings_widgets_click_date_title">Clic sur la date</string>
 	<string name="settings_widgets_click_weather_summary">"Choisir l'application à lancer en cliquant sur la zone météo du widget"</string>
 	<string name="settings_widgets_click_weather_title">Clic sur la météo</string>
-    <string name="settings_widgets_clock_remove_leading_zero_title">Retirer un zéro</string>
-    <string name="settings_widgets_clock_remove_leading_zero_summary">Supprime le zéro des heures</string>
-    <string name="settings_widgets_local_time_title">Heure locale</string>
-    <string name="settings_widgets_local_time_summary">"Utiliser l'heure locale de la ville dans les widgets"</string>	
+	<string name="settings_widgets_clock_remove_leading_zero_title">Retirer un zéro</string>
+	<string name="settings_widgets_clock_remove_leading_zero_summary">Supprime le zéro des heures</string>
+	<string name="settings_widgets_local_time_title">Heure locale</string>
+	<string name="settings_widgets_local_time_summary">"Utiliser l'heure locale de la ville dans les widgets"</string>	
 	<string name="settings_widgets_widget4x1">Widget 4x1</string>
 	<string name="settings_widgets_widget4x1_data_title">Prévisions météorologiques</string>
 	<string name="settings_widgets_widget4x1_transparent_sum">Arrière plan par défaut si option désactivée</string>
@@ -210,26 +231,26 @@
 	<string name="settings_widgets_widget4x2_wind_font_summary">Valeur par défaut 14sp</string>
 	<string name="settings_widgets_widget4x2_wind_font_title">Vent</string>
 	<string name="settings_widgets_widget4x3">Widget 4x3</string>
-    <string name="settings_widgets_widget4x3_hourly_view">Météo heure par heure</string>
+	<string name="settings_widgets_widget4x3_hourly_view">Météo heure par heure</string>
 	<string name="share">Partager</string>
-    <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">"\#WeatherBZ# Aujourd'hui %1$s's la météo est %2$s, %3$s, %4$s. Mis à jour %5$s."</string>
-    <string name="share_weather_title">Partager les données météo</string>
-    <string name="save_screen_shot_failed">"Impossible de sauver le capture d'écran"</string>
+	<string name="share_content">\#WeatherBZ#</string>
+	<string name="share_weather_content">"\#WeatherBZ# Aujourd'hui %1$s's la météo est %2$s, %3$s, %4$s. Mis à jour %5$s."</string>
+	<string name="share_weather_title">Partager les données météo</string>
+	<string name="save_screen_shot_failed">"Impossible de sauver le capture d'écran"</string>
 	<string name="start_time_title">Début</string>
+	<string name="temperature_units">Unité de température</string>
 	<string name="temperature_units_c">Celsius</string>
 	<string name="temperature_units_f">Fahrenheit</string>
-	<string name="temperature_units">Unité de température</string>
 	<string name="text_color_title">Couleur</string>
 	<string name="theme_author">"Auteur : "</string>
-    <string name="theme_date">"Date : "</string>
-    <string name="theme_import_dialog_title">Sélectionnez un thème à importer</string>
-    <string name="theme_import_no_filemanager">Veuillez installer un gestionnaire de fichiers.</string>
-    <string name="theme_import_not_theme">"Ce n'est pas un fichier de thème!"</string>
-    <string name="theme_version">"Version : "</string>
-    <string name="themes_temperature_icons">Icônes temperature</string>
-    <string name="themes_weather_animation">Animations météo</string>
-    <string name="themes_weather_icons">Icônes météo</string>
+	<string name="theme_date">"Date : "</string>
+	<string name="theme_import_dialog_title">Sélectionnez un thème à importer</string>
+	<string name="theme_import_no_filemanager">Veuillez installer un gestionnaire de fichiers.</string>
+	<string name="theme_import_not_theme">"Ce n'est pas un fichier de thème!"</string>
+	<string name="theme_version">"Version : "</string>
+	<string name="themes_temperature_icons">Icônes temperature</string>
+	<string name="themes_weather_animation">Animations météo</string>
+	<string name="themes_weather_icons">Icônes météo</string>
 	<string name="updating">Mise à jour…</string>
 	<string name="upgrade">Mise à jour</string>
 	<string name="visibility_units">Unité de visibilité</string>
@@ -276,15 +297,15 @@
 	<string name="wind_wnw">O-NO</string>
 	<string name="wind_wsw">O-SO</string>
 	<string name="zodiac_aries">Bélier</string>
-    <string name="zodiac_taurus">Taureau</string>
-    <string name="zodiac_gemini">Gémeaux</string>
-    <string name="zodiac_cancer">Cancer</string>
-    <string name="zodiac_leo">Lion</string>
-    <string name="zodiac_virgo">Vierge</string>
-    <string name="zodiac_libra">Balance</string>
-    <string name="zodiac_scorpio">Scorpion</string>
-    <string name="zodiac_sagittarius">Sagittaire</string>
-    <string name="zodiac_capricorn">Capricorne</string>
-    <string name="zodiac_aquarius">Verseau</string>
-    <string name="zodiac_pisces">Poissons</string>
+	<string name="zodiac_taurus">Taureau</string>
+	<string name="zodiac_gemini">Gémeaux</string>
+	<string name="zodiac_cancer">Cancer</string>
+	<string name="zodiac_leo">Lion</string>
+	<string name="zodiac_virgo">Vierge</string>
+	<string name="zodiac_libra">Balance</string>
+	<string name="zodiac_scorpio">Scorpion</string>
+	<string name="zodiac_sagittarius">Sagittaire</string>
+	<string name="zodiac_capricorn">Capricorne</string>
+	<string name="zodiac_aquarius">Verseau</string>
+	<string name="zodiac_pisces">Poissons</string>
 </resources>
