--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+</resources>
 <resources>
- 	<string name="about_author">Автор:</string>
+    <string name="about_author">Автор:</string>
     <string name="about_blizzard">Завірюха</string>
     <string name="about_cloudy">Малохмарно</string>
     <string name="about_dust">Пісчана буря</string>
@@ -24,6 +24,7 @@
     <string name="about_sunny">Ясно</string>
     <string name="about_t_storms">Гроза</string>
     <string name="about_version">Версія:</string>
+    <string name="action_bar_selected_format">Вибрано: %d</string>
     <string name="applying_theme">Застосування теми\u2026</string>
     <string name="app_name">Погода BZ</string>
     <string name="btn_add_location">Додати місто</string>
@@ -41,8 +42,7 @@
     <string name="dialog_color_picker">Вибір кольору</string>
     <string name="donate">Пожертви</string>
     <string name="donations_button_close">Закрити</string>
-    <string name="donations_description">"Чи вважаєте ви додаток корисним? 
-    Підтримайте розробника через flattr, або  відправте пожертву через Google Play Store!"</string>
+    <string name="donations_description">"Чи вважаєте ви додаток корисним? Підтримайте розробника через flattr, або  відправте пожертву через Google Play Store!"</string>
     <string name="donations_flattr_description">Flattr вираховує 10% в вигляді щомісячної абонплати!</string>
     <string name="donations_flattr">Flattr</string>
     <string name="donations_google_android_market_description">Google вираховує 30% с кажної пожертви!</string>
@@ -58,55 +58,55 @@
     <string name="donations_yandex">Яндекс.Гроші</string>
     <string name="end_time_title">Кінец</string>
     <string name="fetching_location">Визначення розташування\u2026</string>
-    <string name="forecast_chance_of_rain">Возможен дождь</string>
-    <string name="forecast_chance_of_showers">Возможен ливень</string>
-    <string name="forecast_chance_of_snow">Возможен снегопад</string>
-    <string name="forecast_chance_of_snow_showers">Ливни со снегом</string>
-    <string name="forecast_chance_of_storm">Возможен шторм</string>
-    <string name="forecast_chance_of_tstorm">Возможна гроза</string>
+    <string name="forecast_chance_of_rain">Можливий дощ</string>
+    <string name="forecast_chance_of_showers">Можлива злива</string>
+    <string name="forecast_chance_of_snow">Можливий снігопад</string>
+    <string name="forecast_chance_of_snow_showers">Зливи зі снігом</string>
+    <string name="forecast_chance_of_storm">Можливий шторм</string>
+    <string name="forecast_chance_of_tstorm">Можлива гроза</string>
     <string name="forecast_clear">Ясно</string>
-    <string name="forecast_cloudy">Облачно</string>
+    <string name="forecast_cloudy">Хмарно</string>
     <string name="forecast_cold">Холодно</string>
-    <string name="forecast_drizzle">Моросящий дождь</string>
-    <string name="forecast_dust">Пыль</string>
+    <string name="forecast_drizzle">Мряка</string>
+    <string name="forecast_dust">Пил</string>
     <string name="forecast_fair">Ясно</string>
-    <string name="forecast_flurries">Порывы ветра</string>
+    <string name="forecast_flurries">Пориви вітру</string>
     <string name="forecast_fog">Туман</string>
-    <string name="forecast_freezing_drizzle">Моросящий снег</string>
-    <string name="forecast_freezing_rain">Ледяной дождь</string>
+    <string name="forecast_freezing_drizzle">Мряка</string>
+    <string name="forecast_freezing_rain">Дощ з льодом</string>
     <string name="forecast_hail">Град</string>
-    <string name="forecast_haze">Дымка</string>
-    <string name="forecast_heavy_rain">Сильный дождь</string>
-    <string name="forecast_hot">Жара</string>
-    <string name="forecast_icy">Гололед</string>
-    <string name="forecast_light_rain">Небольшой дождь</string>
-    <string name="forecast_light_snow">Небольшой снег</string>
+    <string name="forecast_haze">Серпанок</string>
+    <string name="forecast_heavy_rain">Сильний дощ</string>
+    <string name="forecast_hot">Спека</string>
+    <string name="forecast_icy">Ожеледь</string>
+    <string name="forecast_light_rain">Невеликий дощ</string>
+    <string name="forecast_light_snow">Невеликий сніг</string>
     <string name="forecast_mist">Туман</string>
-    <string name="forecast_mostly_cloudy">В основном облачно</string>
-    <string name="forecast_mostly_sunny">В основном солнечно</string>
-    <string name="forecast_overcast">Пасмурно</string>
-    <string name="forecast_partly_cloudy">Облачно с прояснениями</string>
-    <string name="forecast_partly_sunny">Иногда солнечно</string>
-    <string name="forecast_rain">Дождь</string>
-    <string name="forecast_rain_and_snow">Дождь со снегом</string>
-    <string name="forecast_rain_showers">Дождь</string>
-    <string name="forecast_sand">Песок</string>
-    <string name="forecast_scattered_showers">Временами ливни</string>
-    <string name="forecast_scattered_thunderstorms">Временами грозы</string>
-    <string name="forecast_showers">Дожди</string>
-    <string name="forecast_sleet">Мокрый снег</string>
-    <string name="forecast_smoke">Дым</string>
-    <string name="forecast_snow">Снег</string>
-    <string name="forecast_snow_showers">Ливни со снегом</string>
-    <string name="forecast_snow_storm">Метель</string>
-    <string name="forecast_sunny">Солнечно</string>
+    <string name="forecast_mostly_cloudy">В основному хмарно</string>
+    <string name="forecast_mostly_sunny">В основному сонячно</string>
+    <string name="forecast_overcast">Похмуро</string>
+    <string name="forecast_partly_cloudy">Хмарно з проясненнями</string>
+    <string name="forecast_partly_sunny">Зрідка сонячно</string>
+    <string name="forecast_rain">Дощ</string>
+    <string name="forecast_rain_and_snow">Дощ зі снігом</string>
+    <string name="forecast_rain_showers">Дощ</string>
+    <string name="forecast_sand">Пісок</string>
+    <string name="forecast_scattered_showers">Часом зливи</string>
+    <string name="forecast_scattered_thunderstorms">Часом гроза</string>
+    <string name="forecast_showers">Дощі</string>
+    <string name="forecast_sleet">Мокрий сніг</string>
+    <string name="forecast_smoke">Дим</string>
+    <string name="forecast_snow">Сніг</string>
+    <string name="forecast_snow_showers">Зливи зі снігом</string>
+    <string name="forecast_snow_storm">Завірюха</string>
+    <string name="forecast_sunny">Сонячно</string>
     <string name="forecast_thunderstorm">Гроза</string>
-    <string name="forecast_thunderstorms">Грозы</string>
+    <string name="forecast_thunderstorms">Грози</string>
     <string name="forecast_windy">Ветренно</string>
     <string name="just_now">Тільки що</string>
     <string name="loading">Завантаження…</string>
-    <string name="location_gps">Поточне місце розташування</string>
     <string name="location_edit">Введіть назву міста:</string>
+    <string name="location_gps">Поточне місце розташування</string>
     <string name="location_list">Список міст</string>
     <string name="location_search">Пошук міста</string>
     <string name="main_screen_text_color_summary">Колір тексту головного вікна</string>
@@ -116,8 +116,10 @@
     <string name="menu_import">Імпорт теми с SD-карти</string>
     <string name="menu_locations">Міста</string>
     <string name="menu_moon_phases">Фази місяця</string>
+    <string name="menu_settings">Налаштування</string>
     <string name="menu_themes">Теми</string>
     <string name="menu_trend">Графік</string>
+    <string name="menu_update">Оновити</string>
     <string name="moon_age">Вік %s дн.</string>
     <string name="moon_current_view">Період відображення: %s</string>
     <string name="moon_firstquarter">Перша чверть</string>
@@ -130,13 +132,14 @@
     <string name="moon_waninggibbous">Спадаючий місяць</string>
     <string name="moon_waxingcrescent">Зростаючий місяц</string>
     <string name="moon_waxinggibbous">Зростаючий місяц</string>
+    <string name="network_error">Немає з\'єднання з сервером</string>
+    <string name="network_in_quiet_hours">Активований режим Тихих годин. Оновлення відхилено.</string>
+    <string name="network_in_roaming">Включена заборона оновлення в роумінгу.</string>
+    <string name="network_wifi_only">Обновлення налаштовано тільки через Wi-fi.</string>
     <string name="new_version">Нова версія</string>
+    <string name="no_provider">Похибка визначення розташування\nВиберіть розташування уручну</string>
     <string name="not_now">Не зараз</string>
     <string name="no_weather_provider">MIUI weather provider не знайдено</string>
-    <string name="no_provider">Похибка визначення розташування\nВиберіть розташування уручну</string>
-    <string name="menu_settings">Налаштування</string>
-    <string name="menu_update">Оновити</string>
-    <string name="network_error">Немає з\'єднання з сервером</string>
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Натисніть на колір для вибору</string>
     <string name="pressure_units">Одиниці тиску</string>
@@ -147,28 +150,6 @@
     <string name="quiet_hours_enabled_on">Тихі години включені</string>
     <string name="quiet_hours_title">Тихі години</string>
     <string name="save_screen_shot_failed">Помилка при збереженні скріншоту</string>
-    <string name="settings_category_miui">Прошивки MIUI</string>
-    <string name="settings_category_miui_sum">Налаштування для прошивок MIUI, очищення даних погоди MIUI</string>
-    <string name="settings_citydb_provider">База міст</string>
-    <string name="settings_click_actions">Дії по натисканню</string>
-    <string name="settings_miui_support_summary">Включає підтримку вбудованих віджетів MIUI</string>
-    <string name="settings_miui_support_title">Віджети MIUI</string>
-    <string name="settings_miui_v5_summary">Включити, якщо у вас MIUI v5</string>
-    <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
-    <string name="settings_moon_phases_title">Фази місяця</string>
-    <string name="settings_notification_text_color_summary">Коліт тексту та іконки повідомлення</string>
-    <string name="settings_time_format_12h">12-годинний формат</string>
-    <string name="settings_weather_provider">Поставщик прогнозу</string>
-    <string name="settings_widgets_click_date_summary">Вибір додатку для запуску після натискання на дату</string>
-    <string name="settings_widgets_click_date_title">Натискання на дату</string>
-    <string name="settings_widgets_widget4x1">Віджет 4x1</string>
-    <string name="settings_widgets_widget4x1_data_title">Додаткові дані</string>
-    <string name="settings_widgets_widget4x1_v5">Віджет 4x1 (v5)</string>
-    <string name="settings_widgets_widget4x2_v5">Віджет 4x2 (v5)</string>
-    <string name="share">Поділитися</string>
-    <string name="share_content">\#WeatherBZ#</string>
-    <string name="share_weather_content">\#WeatherBZ# Сьогодні в %1$s %2$s, %3$s, %4$s. Оновлено %5$s.</string>
-    <string name="share_weather_title">Поділитися прогнозом</string>
     <string name="settings_about_title">Про програму</string>
     <string name="settings_category_animation">Налаштування анімації</string>
     <string name="settings_category_animation_sum"></string>
@@ -176,6 +157,8 @@
     <string name="settings_category_appearance_sum">Налаштування відображення/приховування елементів інтерфейсу, мова і т.д.</string>
     <string name="settings_category_app_update">Оновлення додатка</string>  
     <string name="settings_category_forecast_update">Оновлення прогнозу</string>    
+    <string name="settings_category_miui">Прошивки MIUI</string>
+    <string name="settings_category_miui_sum">Налаштування для прошивок MIUI, очищення даних погоди MIUI</string>
     <string name="settings_category_network">Налаштування мережі</string>
     <string name="settings_category_notification">Налаштування повідомлень</string>
     <string name="settings_category_notification_sum">Налаштування повідомлень</string>
@@ -185,25 +168,47 @@
     <string name="settings_category_widgets_sum">Зовнішній вигляд віджетів і дії по натисненню на віджети</string>
     <string name="settings_check_updates_summary">Перевіряти наявність нової версії додатка при запуску</string>        
     <string name="settings_check_updates_title">Перевіряти оновлення</string>
+    <string name="settings_citydb_provider">База міст</string>
+    <string name="settings_click_actions">Дії по натисканню</string>
+    <string name="settings_colorize_weather_icons_summary">Окрашивать иконки погоды в цвет текста (например, для белых иконок)</string>
+    <string name="settings_colorize_weather_icons_title">Раскрашивать иконки</string>
+    <string name="settings_miui_support_summary">Включає підтримку вбудованих віджетів MIUI</string>
+    <string name="settings_miui_support_title">Віджети MIUI</string>
+    <string name="settings_miui_v5_summary">Включити, якщо у вас MIUI v5</string>
+    <string name="settings_miui_v5_title">Прошивка MIUI v5</string>
+    <string name="settings_moon_phases_title">Фази місяця</string>
     <string name="settings_notification_color_title">Колір символу повідомлення</string>
     <string name="settings_notification_summary">Показувати поточні показники прогнозу погоди в рядку повідомлень</string>
+    <string name="settings_notification_text_color_summary">Коліт тексту та іконки повідомлення</string>
     <string name="settings_notification_title">Повідомлення про погоду</string>
     <string name="settings_notification_type">Тип повідомлення</string>
     <string name="settings_show_info_summary">Показувати або приховати елементи інтерфейсу</string>
     <string name="settings_show_info_title">Відображення даних</string>
+    <string name="settings_time_format_12h">12-годинний формат</string>
     <string name="settings_update_autoupdate_summary">Автоматичне оновлення прогнозу погоди</string>
     <string name="settings_update_autoupdate_title">Автооновлення</string>
     <string name="settings_update_interval_title">Інтервал оновлення</string>
     <string name="settings_update_roaming_summary">Автоматично оновлювати прогноз погоди у роумінгу. Це може збільшити ваші витрати по оплаті рахунків стільникового зв\'язку</string>
     <string name="settings_update_roaming_title">Оновлювати в роумінгу</string>
+    <string name="settings_update_wake_title">Пробуждать устройство</string>
     <string name="settings_update_wifi_only_summary">Автоматично оновлювати прогноз погоди тільки за наявності підключення по мережі Wi-Fi</string>
     <string name="settings_update_wifi_only_title">Оновлювати тільки по Wi-Fi</string>
+    <string name="settings_weather_provider">Постачальник прогнозу</string>
     <string name="settings_widgets_click_clock_summary">Вибір додатка для запуску після натискання на годинник</string>
     <string name="settings_widgets_click_clock_title">Натискання на годинник</string>
+    <string name="settings_widgets_click_date_summary">Вибір додатку для запуску після натискання на дату</string>
+    <string name="settings_widgets_click_date_title">Натискання на дату</string>
     <string name="settings_widgets_click_weather_summary">Вибір додатка для запуску після натискання на прогноз</string>
     <string name="settings_widgets_click_weather_title">Натискання на прогноз</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Видаляє перший нуль у годинника віджета</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Видалити нуль годинника</string>
+    <string name="settings_widgets_local_time_summary">Використовувати локальний час міста на віджетах</string>
+    <string name="settings_widgets_local_time_title">Локальний час</string>
+    <string name="settings_widgets_widget4x1">Віджет 4x1</string>
+    <string name="settings_widgets_widget4x1_data_title">Додаткові дані</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Зніміть галочку для використання фону за замовчуванням</string> 
     <string name="settings_widgets_widget4x1_transparent_title">Прозорий фон</string> 
+    <string name="settings_widgets_widget4x1_v5">Віджет 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Віджет 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">За замовчуванням 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Місто</string>
@@ -219,8 +224,15 @@
     <string name="settings_widgets_widget4x2_feel_font_title">Відчуття</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">За замовчуванням 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Температура</string>
+    <string name="settings_widgets_widget4x2_v5">Віджет 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">За замовчуванням 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Вітер</string>
+    <string name="settings_widgets_widget4x3">Віджет 4x3</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Погодинний прогноз</string>
+    <string name="share">Поділитися</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">\#WeatherBZ# Сьогодні в %1$s %2$s, %3$s, %4$s. Оновлено %5$s.</string>
+    <string name="share_weather_title">Поділитися прогнозом</string>
     <string name="start_time_title">Початок</string>
     <string name="temperature_units">Одиниці температури</string>
     <string name="temperature_units_c">Цельсій</string>
@@ -241,10 +253,21 @@
     <string name="visibility_units_km">" км"</string>
     <string name="visibility_units_m">" м"</string>
     <string name="visibility_units_mi">" миль"</string>
+    <string name="weather_feel">"Відчуття: "</string>
+    <string name="weather_humidity">"Вологість: "</string>
+    <string name="weather_no_city">Місто не вибране</string>
+    <string name="weather_no_data">Немає данних</string>
+    <string name="weather_pressure">"Тиск: "</string>
     <string name="weather_sunrize">"Світанок: "</string>
     <string name="weather_sunset">"Захід: "</string>
-    <string name="widget_name_4x2_v5">Погода BZ 4x2 v5</string>
+    <string name="weather_visibility">"Видимість: "</string>
+    <string name="weather_wind">"Вітер: "</string>
+    <string name="widget_name_4x1">Погода BZ 4x1</string>
+    <string name="widget_name_4x1_ext">Погода BZ 4x1</string>
     <string name="widget_name_4x1_v5">Погода BZ 4x1</string>
+    <string name="widget_name_4x2">Погода BZ 4x2</string>
+    <string name="widget_name_4x2_v5">Погода BZ 4x2 v5</string>
+    <string name="widget_name_4x3">(4x3)Погода BZ</string>
     <string name="widget_text_color_summary">Колір тексту віджету</string>
     <string name="wind_e">С</string>
     <string name="wind_ene">С-ПнС</string>
@@ -267,16 +290,6 @@
     <string name="wind_w">З</string>
     <string name="wind_wnw">З-ПнЗ</string>
     <string name="wind_wsw">З-ПдЗ</string>
-    <string name="weather_feel">"Відчуття: "</string>
-    <string name="weather_humidity">"Вологість: "</string>
-    <string name="weather_no_city">Місто не вибране</string>
-    <string name="weather_no_data">Немає данних</string>
-    <string name="weather_pressure">"Тиск: "</string>
-    <string name="weather_visibility">"Видимість: "</string>
-    <string name="weather_wind">"Вітер: "</string>
-    <string name="widget_name_4x2">Погода BZ 4x2</string>
-    <string name="widget_name_4x1">Погода BZ 4x1</string>
-    <string name="widget_name_4x1_ext">Погода BZ 4x1</string>
     <string name="zodiac_aquarius">Водолій</string>
     <string name="zodiac_aries">Овен</string>
     <string name="zodiac_cancer">Рак</string>
@@ -289,4 +302,4 @@
     <string name="zodiac_scorpio">Скорпіон</string>
     <string name="zodiac_taurus">Телець</string>
     <string name="zodiac_virgo">Діва</string>
-</resources>
+<?xml version="1.0" encoding="utf-8"?>
