Update SK translation

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -13,10 +13,13 @@
     <string name="about_heavy_snow">Ťažký sneh</string> 
     <string name="about_light_rain">Mrholenie</string>
     <string name="about_light_snow">Jemný sneh</string>
+    <string name="about_moderate_rain">Mierny dážď</string>
+    <string name="about_moderate_snow">Mierny sneh</string>
     <string name="about_overcast">Zamračené</string>
-    <string name="about_rainstorm">Prietrž</string>
     <string name="about_rain_drizzle">Prehánky</string>
+    <string name="about_rainstorm">Prietrž</string>
     <string name="about_sleet">Pľušť</string>
+    <string name="about_snow_showers">Dážď so snehom</string>
     <string name="about_social">Sociálne odkazy:</string>
     <string name="about_sunny">Jasno</string>
     <string name="about_t_storms">Búrky</string>
@@ -66,6 +69,7 @@
     <string name="forecast_chance_of_tstorm">Búrka</string>
     <string name="forecast_clear">Jasno</string>
     <string name="forecast_cloudy">Zamračené</string>
+    <string name="forecast_cold">Chladno</string>
     <string name="forecast_drizzle">Mrholenie</string>
     <string name="forecast_dust">Prašnosť</string>
     <string name="forecast_fair">Pekne</string>
@@ -76,7 +80,8 @@
     <string name="forecast_hail">Krupobitie</string>
     <string name="forecast_haze">Opar</string>
     <string name="forecast_heavy_rain">Výdatný dážď</string>
-    <string name="forecast_icy">Námraza</string>
+    <string name="forecast_hot">Horúco</string>
+	<string name="forecast_icy">Námraza</string>
     <string name="forecast_light_rain">Slabý dážď</string>
     <string name="forecast_light_snow">Slabé sneženie</string>
     <string name="forecast_mist">Hmlový opar</string>
@@ -99,7 +104,9 @@
 	<string name="forecast_snow_storm">Snehová búrka</string>
     <string name="forecast_sunny">Slnečno</string>
     <string name="forecast_thunderstorm">Búrka</string>
-    <string name="forecast_windy">Búrka</string>
+    <string name="forecast_thunderstorms">Búrky</string>
+    <string name="forecast_tornado">Tornádo</string>
+    <string name="forecast_windy">Veterno</string>
     <string name="just_now">Práve teraz</string>
     <string name="loading">Načítavanie...</string>	
     <string name="location_edit">Vložte názov Mesta</string>
@@ -197,6 +204,10 @@
     <string name="settings_widgets_click_date_title">Dotyk na dátum</string>
     <string name="settings_widgets_click_weather_summary">Aplikácia sa spustí pri dotyku na widget s počasím (teplotu)</string>
     <string name="settings_widgets_click_weather_title">Dotyk na predpoveď</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Nezobrazovať nulu v hodinách</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Nezobrazovať nulu</string>
+    <string name="settings_widgets_local_time_summary">Použiť lokálny čas vo widgete</string>
+    <string name="settings_widgets_local_time_title">Lokálny čas</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Rozšírené dáta</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Odznačte pre predvolené pozadie</string>
@@ -220,7 +231,9 @@
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Predvolená hodnota 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Vietor</string>
-    <string name="share">Zdieľať</string>
+    <string name="settings_widgets_widget4x3">Widget 4x3</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Hodinová predpoveď</string>
+   	<string name="share">Zdieľať</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Dnes %1$s je počasie %2$s, %3$s, %4$s. Stav z %5$s."</string>
     <string name="share_weather_title">Zdieľať informácie o počasí</string>
@@ -245,7 +258,8 @@
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" míle"</string>
     <string name="weather_feel">"Pocitovo: "</string>
-    <string name="weather_humidity">"Vlhkosť: "</string>
+    <string name="weather_forecast_empty">--</string>
+	<string name="weather_humidity">"Vlhkosť: "</string>
     <string name="weather_no_city">Žiadne Mesto</string>
     <string name="weather_no_data">Žiadne údaje o počasí</string>
     <string name="weather_no_temp_data">-°</string>
@@ -254,11 +268,12 @@
     <string name="weather_sunset">"Západ: "</string>
     <string name="weather_visibility">"Viditeľnosť: "</string>
     <string name="weather_wind">"Vietor: "</string>
-    <string name="widget_name_4x2">Počasie BZ 4x2</string>
-    <string name="widget_name_4x2_v5">Počasie BZ 4x2</string>
     <string name="widget_name_4x1">Počasie BZ 4x1</string>
     <string name="widget_name_4x1_ext">(4x1 ext)Weather BZ</string>
     <string name="widget_name_4x1_v5">(4x1 v5)Weather BZ</string>
+    <string name="widget_name_4x2">Počasie BZ 4x2</string>
+    <string name="widget_name_4x2_v5">Počasie BZ 4x2</string>
+    <string name="widget_name_4x3">(4x3)Weather BZ</string>
     <string name="widget_text_color_summary">"Farba textu widgetu"</string>
     <string name="wind_e">V</string>
     <string name="wind_ene">V-SV</string>
