--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -306,6 +306,6 @@
     <string name="zodiac_scorpio">Escorpio</string>
     <string name="zodiac_sagittarius">Sagitario</string>
     <string name="zodiac_capricorn">Capricornio</string>
-    <string name="zodiac_aquarius">Aquario</string>
+    <string name="zodiac_aquarius">Acuario</string>
     <string name="zodiac_pisces">Piscis</string>
 </resources>
