Update CS and typos

--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -8,19 +8,25 @@
     <string name="about_for_translators">Pro překladatele:</string>
     <string name="about_for_translators_text">Pokud chcete pomoci s překladem této aplikace do Vašeho jazyka, náš github repo najdete po stisknutí ikony Githubu.</string>              
     <string name="about_hailstone">Kroupy</string>
+    <string name="about_haze">Mlha</string>
+    <string name="about_heavy_rain">Průtrž</string>
     <string name="about_heavy_snow">Těžký sníh</string> 
     <string name="about_light_rain">Mrholení</string>
     <string name="about_light_snow">Jemný sníh</string>
+    <string name="about_moderate_rain">Mírný déšť</string>
+    <string name="about_moderate_snow">Mírný sníh</string>
     <string name="about_overcast">Zamračeno</string>
-    <string name="about_rainstorm">Průtrž</string>
     <string name="about_rain_drizzle">Přeháňky</string>
+    <string name="about_rainstorm">Průtrž</string>
     <string name="about_sleet">Plískanice</string>
+    <string name="about_snow_showers">Déšť se sněhem</string>
     <string name="about_social">Sociální odkazy:</string>
     <string name="about_sunny">Jasno</string>
     <string name="about_t_storms">Bouřky</string>
     <string name="about_version">Verze:</string>
-    <string name="applying_theme">Nastavování téma\u2026</string>
+    <string name="action_bar_selected_format">Zvoleno: %d</string>
     <string name="app_name">Počasí</string>
+    <string name="applying_theme">Nastavování téma\u2026</string>
     <string name="btn_add_location">Přidat</string>
     <string name="btn_apply_theme">Použít</string>
     <string name="btn_delete_location">Vymazat</string>
@@ -63,6 +69,7 @@
     <string name="forecast_chance_of_tstorm">Bouřka</string>
     <string name="forecast_clear">Jasno</string>
     <string name="forecast_cloudy">Zamračeno</string>
+    <string name="forecast_cold">Chladno</string>
     <string name="forecast_drizzle">Mrholení</string>
     <string name="forecast_dust">Prašno</string>
     <string name="forecast_fair">Hezky</string>
@@ -73,11 +80,12 @@
     <string name="forecast_hail">Krupobití</string>
     <string name="forecast_haze">Opar</string>
     <string name="forecast_heavy_rain">Vydatný déšť</string>
+    <string name="forecast_hot">Horko</string>
     <string name="forecast_icy">Námraza</string>
     <string name="forecast_light_rain">Slabý déšť</string>
     <string name="forecast_light_snow">Slabé sněžení</string>
     <string name="forecast_mist">Mlžný opar</string>
-    <string name="forecast_mostly_cloudy">Převážne oblačno</string>
+    <string name="forecast_mostly_cloudy">Převážně oblačno</string>
     <string name="forecast_mostly_sunny">Převážně jasno</string>
     <string name="forecast_overcast">Zataženo</string>
     <string name="forecast_partly_cloudy">Polojasno</string>
@@ -85,19 +93,20 @@
     <string name="forecast_rain">Déšť</string>
     <string name="forecast_rain_and_snow">Déšť se sněhem</string>
     <string name="forecast_rain_showers">Dešťové přeháňky</string>
-	<string name="forecast_sand">Písek</string>
+    <string name="forecast_sand">Písek</string>
     <string name="forecast_scattered_showers">Ojedinělé přeháňky</string>
     <string name="forecast_scattered_thunderstorms">Ojedinělé bouřky</string>
     <string name="forecast_showers">Přeháňky</string>
-    <string name="forecast_sleet">Déšt se sněhem</string>
+    <string name="forecast_sleet">Déšť se sněhem</string>
     <string name="forecast_smoke">Kouř</string>
     <string name="forecast_snow">Sníh</string>
     <string name="forecast_snow_showers">Sněhové přeháňky</string>
-	<string name="forecast_snow_storm">Sněhová bouře</string>
+    <string name="forecast_snow_storm">Sněhová bouře</string>
+    <string name="forecast_snow_storm">Sněhová bouře</string>
     <string name="forecast_sunny">Slunečno</string>
     <string name="forecast_thunderstorm">Bouřka</string>
+    <string name="forecast_tornado">Tornádo</string>
     <string name="forecast_windy">Bouře</string>
-    <string name="forecast_snow_storm">Sněhová bouře</string>
     <string name="just_now">Právě teď</string>
     <string name="loading">Načítání...</string>
     <string name="location_edit">Vložte název Města</string>
@@ -128,15 +137,18 @@
     <string name="moon_waxingcrescent">Dorůstající srpek</string>
     <string name="moon_waxinggibbous">Dorůstající měsíc</string>
     <string name="network_error">Nelze se připojit na server</string>
+    <string name="network_in_quiet_hours">Během času ticha jsou aktualizace pozastaveny.</string>
+    <string name="network_in_roaming">Během roamingu jsou aktualizace pozastaveny.</string>
+    <string name="network_wifi_only">Aktualizovat jen na Wi-Fi.</string>
     <string name="new_version">Nová verze</string> 
+    <string name="no_provider">"Určení polohy selhalo. Zvolte město manuálně"</string> 
+    <string name="no_weather_provider">Žádný zdroj předpovědi</string>
     <string name="not_now">Později</string> 
-    <string name="no_provider">"Určení polohy selhalo. Zvolte město manuálně"</string>
-    <string name="no_weather_provider">Žádný zdroj předpovědi</string> 
     <string name="ok">OK</string>
+    <string name="press_color_to_apply">Zvolte barvu</string>
     <string name="pressure_units">Jednotka tlaku</string>
     <string name="pressure_units_mb">" hPa"</string>
     <string name="pressure_units_mmhg">" mm.Hg"</string>
-    <string name="press_color_to_apply">Zvolte barvu</string>
     <string name="quiet_hours_enabled">Povolit čas ticha</string>
     <string name="quiet_hours_enabled_off">Aktualizace fungují jako obyčejně</string>
     <string name="quiet_hours_enabled_on">Čas ticha povolen</string>
@@ -145,9 +157,9 @@
     <string name="settings_about_title">O aplikaci</string>
     <string name="settings_category_animation">Nastavení animací</string>
     <string name="settings_category_animation_sum">Nastavení animací počasí a stahování dat</string>
+    <string name="settings_category_app_update">Aktualizace aplikace</string>
     <string name="settings_category_appearance">Přizpůsobení</string>
     <string name="settings_category_appearance_sum">Přizpůsobení nastavení (jednotka teploty, barva textu atd.)</string>
-    <string name="settings_category_app_update">Aktualizace aplikace</string>
     <string name="settings_category_forecast_update">Aktualizace předpovědi</string>
     <string name="settings_category_miui">MIUI ROM</string>
     <string name="settings_category_miui_sum">Podpora MIUI (aktivovat, vyčistit data atd.)</string>
@@ -161,7 +173,9 @@
     <string name="settings_check_updates_summary">Kontrolovat aktualizace při spuštění</string>
     <string name="settings_check_updates_title">Kontrola aktualizací</string>
     <string name="settings_citydb_provider">Databáze měst</string>
-    <string name="settings_click_actions">Přizpůsobení widgetu</string>
+    <string name="settings_click_actions">Akce kliknutí</string>
+    <string name="settings_colorize_weather_icons_summary">Nastavit barvu ikon dle barvy textu (např. pro bílé ikony počasí)</string>
+    <string name="settings_colorize_weather_icons_title">Barevné ikony</string>
     <string name="settings_miui_support_summary">Povolte pro podporu widgetu počasí MIUI</string>
     <string name="settings_miui_support_title">MIUI widget</string>
     <string name="settings_miui_v5_summary">Povolte pokud používáte MIUI v5</string>
@@ -185,11 +199,15 @@
     <string name="settings_update_wifi_only_title">Aktualizovat jen na Wi-Fi</string>
     <string name="settings_weather_provider">Zdroj předpovědi</string>
     <string name="settings_widgets_click_clock_summary">Zvolená aplikace se spustí při dotyku na widget s hodinami</string>
-    <string name="settings_widgets_click_clock_title">Tapnutí na Hodiny</string>
+    <string name="settings_widgets_click_clock_title">Dotyk na Hodiny</string>
     <string name="settings_widgets_click_date_summary">Zvolená aplikace se spustí při dotyku na datum widgetu</string>
-    <string name="settings_widgets_click_date_title">Tapnutí na Datum</string>
+    <string name="settings_widgets_click_date_title">Dotyk na Datum</string>
     <string name="settings_widgets_click_weather_summary">Zvolená aplikace se spustí při dotyku na widget s počasím (teplotou)</string>
-    <string name="settings_widgets_click_weather_title">Tapnutí na Předpověď</string>
+    <string name="settings_widgets_click_weather_title">Dotyk na Předpověď</string>
+    <string name="settings_widgets_clock_remove_leading_zero_summary">Nezobrazovat nulu v hodinách</string>
+    <string name="settings_widgets_clock_remove_leading_zero_title">Nezobrazovat nulu</string>
+    <string name="settings_widgets_local_time_summary">Použít lokální čas ve widgetu</string>
+    <string name="settings_widgets_local_time_title">Lokální čas</string>
     <string name="settings_widgets_widget4x1">Widget 4x1</string>
     <string name="settings_widgets_widget4x1_data_title">Rozšířená data</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Nastavte pro předvolené pozadí</string>
@@ -213,6 +231,8 @@
     <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Předvolená hodnota 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Vítr</string>
+    <string name="settings_widgets_widget4x3">Widget 4x3</string>
+    <string name="settings_widgets_widget4x3_hourly_view">Hodinová předpověď</string>
     <string name="share">Sdílet</string>
     <string name="share_content">\#WeatherBZ#</string>
     <string name="share_weather_content">"\#WeatherBZ# Dnes %1$s je počasí %2$s, %3$s, %4$s. Stav z %5$s."</string>
@@ -222,15 +242,15 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Barva textu</string>
-    <string name="themes_temperature_icons">Ikony teploty</string>
-    <string name="themes_weather_animation">Animace počasí</string>
-    <string name="themes_weather_icons">Ikony počasí</string>
     <string name="theme_author">"Autor: "</string>
     <string name="theme_date">"Datum: "</string>
     <string name="theme_import_dialog_title">Vyberte téma</string>
-    <string name="theme_import_not_theme">Neplatný soubor!</string>
     <string name="theme_import_no_filemanager">Nainstalujte Správce souborů.</string>
+    <string name="theme_import_not_theme">Neplatný soubor!</string>
     <string name="theme_version">"Verze: "</string>
+    <string name="themes_temperature_icons">Ikony teploty</string>
+    <string name="themes_weather_animation">Animace počasí</string>
+    <string name="themes_weather_icons">Ikony počasí</string>
     <string name="updating">Aktualizace...</string>
     <string name="upgrade">Aktualizovat</string>
     <string name="visibility_units">Jednotka viditelnosti</string>
@@ -238,6 +258,7 @@
     <string name="visibility_units_m">" m"</string>
     <string name="visibility_units_mi">" míle"</string>
     <string name="weather_feel">"Pocitově: "</string>
+    <string name="weather_forecast_empty">--</string>
     <string name="weather_humidity">"Vlhkost: "</string>
     <string name="weather_no_city">Žádné Město</string>
     <string name="weather_no_data">Žádné údaje o počasí</string>
@@ -247,11 +268,12 @@
     <string name="weather_sunset">"Západ: "</string>
     <string name="weather_visibility">"Viditelnost: "</string>
     <string name="weather_wind">"Vítr: "</string>
-    <string name="widget_name_4x2">Počasí 4x2</string>
-    <string name="widget_name_4x2_v5">Počasí 4x2 v5</string>
     <string name="widget_name_4x1">Počasí 4x1</string>
-    <string name="widget_name_4x1_ext">Počasí 4x1ext</string>
-    <string name="widget_name_4x1_v5">Počasí 4x1 v5</string>
+    <string name="widget_name_4x1_ext">(4x1 ext)Weather BZ</string>
+    <string name="widget_name_4x1_v5">(4x1 v5)Weather BZ</string>
+    <string name="widget_name_4x2">Počasí BZ 4x2</string>
+    <string name="widget_name_4x2_v5">Počasí BZ 4x2</string>
+    <string name="widget_name_4x3">(4x3)Weather BZ</string>
     <string name="widget_text_color_summary">"barva textu widgetu"</string>
     <string name="wind_e">V</string>
     <string name="wind_ene">V-SV</string>
@@ -275,7 +297,7 @@
     <string name="wind_wnw">Z-SZ</string>
     <string name="wind_wsw">Z-JZ</string>
     <string name="zodiac_aquarius">Vodnář</string>
-    <string name="zodiac_aries">Baran</string>
+    <string name="zodiac_aries">Beran</string>
     <string name="zodiac_cancer">Rak</string>
     <string name="zodiac_capricorn">Kozoroh</string>
     <string name="zodiac_gemini">Blíženci</string>
